--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ body::before {
     opacity: 0.4;
 }
 
+canvas{
+    display: block;
+}
+
 .container {
     width: 1200px;
     height: 600px;
@@ -33,13 +37,12 @@ body::before {
     align-items: center;
     justify-content: space-between;
     border-radius: 24px;
-    border: 1px solid #1875E8;
+    border: 1px solid #00eeff;
     box-shadow: 4px 4px 20px 0px rgba(1, 8, 14, 0.15);
     background-image: url("img/Ruido.png");
     background-size: 100% 100%;
     position: relative;
 }
-
 
 .container__contenido {
     display: flex;
@@ -55,17 +58,19 @@ body::before {
 
 .container__boton {
     border-radius: 16px;
-    background: #1875E8;
+    background: #c264ee;
     padding: 16px 24px;
     width: 100%;
     font-size: 24px;
     font-weight: 700;
     border: none;
     margin-top: 2rem;
+    cursor: pointer;
 }
 
 .container__boton:disabled {
     background: #898989;
+    cursor: auto;
 }
 
 .container__texto {
@@ -80,13 +85,16 @@ body::before {
     width: 100%;
     height: 72px;
     border-radius: 16px;
-    background-color: #FFF;
+    background-color: #040225;
     border: none;
-    color: #1875E8;
+    color: #00eeff;
     padding: 2rem;
     font-size: 24px;
     font-weight: 700;
     font-family: 'Inter', sans-serif;
+}
+.container__input:focus{
+    outline: 1px solid #00eeff;
 }
 
 .container__botones {
